kubernetes/pipelines/pipelines-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yocto-build
---
#apiVersion: v1
#kind: LimitRange
#metadata:
#  name: yocto-build-limit
#  namespace: yocto-build
#spec:
#  limits:
#    - type: Container
#      defaultRequest:
#        memory: 8Gi
#        cpu: 6.5
#      default:
#        memory: 8Gi
#        cpu: 6.5
#
