kubernetes/pipelines/ingress.yaml
# Ingress rules to allow access to the Yocto NFS cache outside the cluster
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cache-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: galactica.local
    http:
      paths:
        - path: /cache(/|$)(.*)
          backend:
            serviceName: yocto-cache
            servicePort: 80
